--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="app_name">Antresol</string>
     <string name="action_settings">Settings</string>
 
+    <string name="error_message_default">Something happened</string>
+
 </resources>
