Add price field on ad list screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
 
     <string name="error_message_default">Something happened</string>
 
+    <string name="currency_uah">UAH</string>
+
 </resources>
