--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="ad_title_hint">Введите название</string>
     <string name="price">Стоимость</string>
     <string name="price_default_hint">00</string>
+    <string name="want">Хочу</string>
 </resources>
