--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,9 @@
     <string name="price">Стоимость</string>
     <string name="price_default_hint">00</string>
     <string name="want">Хочу</string>
+
+    <string name="login">Вход</string>
+    <string name="login_fb">Войти с помощью Facebook</string>
+    <string name="login_vk">Войти с помощью Вконтакте</string>
+
 </resources>
