--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,10 @@
     <string name="price_default_hint">00</string>
     <string name="want">Хочу</string>
 
+    <string name="seller">Продавец</string>
+    <string name="activity">Активность</string>
+    <string name="create_ad">Подать товар</string>
+    
     <string name="login">Вход</string>
     <string name="login_fb">Войти с помощью Facebook</string>
     <string name="login_vk">Войти с помощью Вконтакте</string>
