--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="create_ad">Подать товар</string>
     
     <string name="login">Вход</string>
+    <string name="current_user">Мой профайл</string>
     <string name="login_fb">Войти с помощью Facebook</string>
     <string name="login_vk">Войти с помощью Вконтакте</string>
 
