--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
 
     <string name="category"></string>
     <string name="category_hint">Укажите категорию для того, что бы люди могли найти ваш товар быстрее</string>
-    <string name="add_phone">Добавить телефон</string>
+    <string name="add_phone">Контактный телефон</string>
     <string name="ad_info">Информация о товаре</string>
     <string name="ad_short_desc_hint">Краткое описание (140 символов)</string>
     <string name="ad_title_hint">Введите название</string>
@@ -36,4 +36,10 @@
     <string name="comments_hint">Оставить комментарий</string>
     <string name="send">Отправить</string>
     <string name="comments_amount">0 комментариев</string>
+
+    <string name="add_photo">Добавить фото</string>
+
+    <string name="select_category">Выбрать категорию</string>
+
+    <string name="add_main_photo">Добавить главное фото</string>
 </resources>
